k8s/device-sync-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: device-sync-service
  namespace: lissa-fit
  labels:
    app: device-sync-service
    version: v1
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: device-sync-service
  template:
    metadata:
      labels:
        app: device-sync-service
        version: v1
      annotations:
        prometheus.io/port: "8083"
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: device-sync-service
          image: mihailovpasha/device-sync-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
              name: http
              protocol: TCP
          resources:
            requests:
              memory: "384Mi"
              cpu: "200m"
            limits:
              memory: "768Mi"
              cpu: "800m"
