k8s/device-sync-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: device-sync-service
  namespace: lissa-fit
  labels:
    app: device-sync-service
spec:
  type: ClusterIP
  selector:
    app: device-sync-service
  ports:
    - port: 80
      targetPort: 8083
      name: http
      protocol: TCP
  sessionAffinity: None
